--- a/index.html
+++ b/index.html
@@ -26,21 +26,21 @@
 
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="icon" type="image/png" href="images/favicon.png">
-
+  <link rel="icon" type="image/x-icon" href="images/favicon.ico">
 </head>
 
 <body>
 
-  <!-- Primary Page Layout
+  <!-- Section présentation Agile Tour 2020
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <div class="section">
+    <!-- first section -->
     <div class="container">
       <div class="row">
+
         <div class="one-half column">
-
-          <h1 class="section-heading">L&#39;Agile Tour Sophia Antipolis</h1>
-
+          <!-- <h1 class="section-heading">L&#39;Agile Tour Sophia Antipolis</h1> -->
+          <img class="u-max-full-width" src="images/ATSA 2020.png">
           <h5 class="section-heading">Edition 2020 - Vendredi 18 Décembre 2020</h5>
 
           <p>L&#39;équipe d&#39;organisation Agile Tour Sophia Antipolis vous invite à la 10ième édition de la
@@ -49,15 +49,18 @@
           <p>L&#39;Agile Tour est une série de conférences mondiales dédiées au développement agile. L&#39;étape
             sophiapolitaine est organisée par un collectif d’entreprises, d’agilistes et l’association Telecom Valley.
           </p>
-
         </div>
+
         <div class="one-half column">
           <img class="u-max-full-width" src="images/CAMPUS-SOPHIATECH-600x400.jpg">
         </div>
+
       </div>
     </div>
   </div>
 
+  <!-- Section Pitch Agile Tour
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <div class="section backgrouned-with-img">
     <div class="container">
       <div class="row">
@@ -82,73 +85,180 @@
     </div>
   </div>
 
-  <div class="section centered-content backgrouned with-color-five">
+  <!-- Section Appel à orateur
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <div class="section centered-content backgrouned with-color-logo-orange">
     <!-- <div class="section centered-content"></div> -->
     <div class="container">
-      <h2 class="section-heading">Appel à orateur</h2>
-      <p>Vous souhaitez participez, venez vous inscrire!</p>
-      <!-- <a class="button button-primary" href="http://getskeleton.com">Je propose un sujet</a> -->
-      <iframe class="airtable-embed" src="https://airtable.com/embed/shr9NM6NaL3KRlOFc?backgroundColor=grey"
-        frameborder="0" onmousewheel="" width="100%" height="533"
-        style="background: transparent; border: 1px solid #ccc;"></iframe>
+
+      <h1 class="section-heading">Appel à orateur</h1>
+
+      <h4>Vous souhaitez participez, venez vous inscrire!</h4>
+
+      <button id="orateurBtn" class="button button-primary">Je propose un sujet</button>
+
     </div>
   </div>
 
+  <!-- Section Informations de date et de lieu de l'événement
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <div class="section backgrouned-with-img">
     <div class="container">
       <div class="row">
+
         <div class="one-half column">
-          <h2>Date et lieu de l&#39;événement</h2>
+
+          <h1>Date et lieu de l&#39;événement</h1>
+
           <p>Vendredi 18 septembre 2020 à l&#39;Université de Nice Sophia Campus SophiaTech - Bâtiment Forum, 400 route
             des Chappes - 06410 Biot Sophia Antipolis</p>
+
         </div>
+
         <div class="one-half column">
+
           <a href="https://www.google.com/maps/d/viewer?mid=1ULsHWNtc8SySNK4rNMaoawEMOok"> <img class="u-max-full-width"
               src="images/Carte.png" alt="PLan"></a>
+
         </div>
+
       </div>
     </div>
   </div>
 
+  <!-- Section Devenir sponsor
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <div class="section centered-content">
     <div class="container">
+
       <h2 class="section-heading">Devenir Sponsor</h2>
+
       <p>Vous souhaitez participez, venez vous inscrire!</p>
-      <a class="button button-primary" href="http://getskeleton.com">Devenir sponsor</a>
+
+      <button id="sponsorBtn" class="button button-primary">Devenir sponsor</button>
+
     </div>
   </div>
 
+  <!-- Section Equipe organisatrice
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <div class="section backgrouned with-dark-color">
     <div class="container">
       <row>
         <h2 class="section-heading">Equipe d&#39;organisation</h2>
 
         <iframe class="airtable-embed" src="https://airtable.com/embed/shrboOC3AeuUrto6Q?backgroundColor=gray"
-          frameborder="0" onmousewheel="" width="100%" height="533"
-          style="background: transparent; border: 1px solid #ccc;"></iframe>
+          frameborder="0" onmousewheel="" width="100%" height="733"
+          style="background: transparent; border: 1px solid #ccc; margin-top:1em;">
+        </iframe>
+
       </row>
     </div>
   </div>
 
-  <div class="section backgrouned with-color-five">
+  <!-- Section Progammation
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <div class="section backgrouned with-color-logo-orange">
     <div class="container">
       <row>
-        <div class="one-half column">
-          <h2 class="section-heading">Programmation</h2>
 
+        <div class="one-half column">
           <iframe class="airtable-embed"
             src="https://airtable.com/embed/shrDBNglf4B1t6Cok?backgroundColor=gray&viewControls=on" frameborder="0"
             onmousewheel="" width="100%" height="533" style="background: transparent; border: 1px solid #ccc;"></iframe>
         </div>
+
         <div class="one-half column">
+          <h2 class="section-heading">Programmation</h2>
           <img class="u-max-full-width" src="images/ATSA-1-logo-75dpi.jpg">
         </div>
+
       </row>
     </div>
   </div>
 
-  <!-- End Document
-        –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <!-- The Modal -->
+  <div id="orateurModal" class="modal">
+
+    <!-- Modal content -->
+    <div class="modal-content">
+
+      <sponsorPpan id="closeOrateurModal" class="close">&times;</sponsorPpan>
+
+      <iframe class="airtable-embed" src="https://airtable.com/embed/shr9NM6NaL3KRlOFc?backgroundColor=grey"
+        frameborder="0" onmousewheel="" width="100%" height="533"
+        style="background: transparent; border: 1px solid #ccc;">
+      </iframe>
+
+    </div>
+
+  </div>
+
+  <div id="sponsorModal" class="modal">
+
+    <!-- Modal content -->
+    <div class="modal-content">
+
+      <sponsorPpan id="closeSponsorModal" class="close">&times;</sponsorPpan>
+
+      <iframe class="airtable-embed" src="https://airtable.com/embed/shrM2eRgWrEfPBj1w?backgroundColor=gray"
+        frameborder="0" onmousewheel="" width="100%" height="533"
+        style="background: transparent; border: 1px solid #ccc;"></iframe>
+
+    </div>
+
+  </div>
+
+  <script>
+    
+    // Get the modal
+    var orateurModal = document.getElementById("orateurModal");
+
+
+    // Get the button that opens the modal
+    var orateurbtn = document.getElementById("orateurBtn");
+
+    // Get the <sponsorPpan> element that closes the modal
+    var orateurSpan = document.getElementById("closeOrateurModal");
+
+    // When the user clicks the button, open the modal 
+    orateurbtn.onclick = function () {
+      orateurModal.style.display = "block";
+    }
+
+    // When the user clicks on <sponsorPpan> (x), close the modal
+    orateurSpan.onclick = function () {
+      orateurModal.style.display = "none";
+    }
+    
+    // Get the modal
+    var sponsorModal = document.getElementById("sponsorModal");
+
+    // Get the button that opens the modal
+    var sponsorBtn = document.getElementById("sponsorBtn");
+
+    // Get the <sponsorPpan> element that closes the modal
+    var sponsorSpan = document.getElementById("closeSponsorModal");
+
+    // When the user clicks the button, open the modal 
+    sponsorBtn.onclick = function () {
+      sponsorModal.style.display = "block";
+    }
+
+    // When the user clicks on <sponsorPpan> (x), close the modal
+    sponsorSpan.onclick = function () {
+      sponsorModal.style.display = "none";
+    }
+
+    // When the user clicks anywhere outside of the modal, close it
+    window.onclick = function (event) {
+      if (event.target == sponsorModal||event.target == orateurModal) {
+        sponsorModal.style.display = "none";
+        orateurModal.style.display = "none";
+      }
+    }
+  </script>
+
 </body>
 
 </html>
